# rag-gateway

./: .gitignore  install.sh  pyproject.toml  uninstall.sh  validate.sh
etc/: api.yaml  config.yaml  ingest.yaml  sources.yaml
rag_gateway/: app.py  config.py  ingest_pipeline.py  ingest_service.py  main.py  models.py  qdrant_store.py  redact.py  retrieval.py  scheduled_crawl.py  scheduled_crawl_cli.py  tantivy_index.py  tei_client.py  vllm_client.py
rag_gateway/api/: app.py  deps.py
rag_gateway/api/routes/: chat.py  embeddings.py  health.py  models.py
rag_gateway/core/: chunking.py  models.py  retrieval.py  text_processing.py
rag_gateway/ingestion/: cli.py  pipeline.py  service.py
rag_gateway/ingestion/crawlers/: github_crawler.py  http_crawler.py
rag_gateway/storage/: qdrant_store.py  tantivy_index.py
scripts/: analyze-embedding-failures  download-models.sh  rag-gateway-crawl  wait-http.sh  wait-vllm-models.sh
systemd/: qdrant.service  rag-crawl.service  rag-crawl.timer  rag-gateway.service  rag-stack.service  rag-stack.target  tei-embed.service  tei-rerank.service  vllm.service
systemd/overrides/rag-crawl.timer.d/: 10-stack.conf
systemd/overrides/rag-gateway.service.d/: 10-stack.conf
systemd/overrides/tei-embed.service.d/: 10-stack.conf
systemd/overrides/tei-rerank.service.d/: 10-stack.conf
systemd/overrides/vllm.service.d/: 10-stack.conf
