[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "qdrant-client>=1.9",
  "tantivy>=0.22",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
]

[project.scripts]
rag-gateway-crawl = "rag_gateway.scheduled_crawl_cli:main"

[tool.setuptools]
packages = ["rag_gateway"]

[tool.uvicorn]
factory = false

